{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 56,
  "lineage": "4a1a80dd-4ea6-0c87-cbb5-1bb6e88b1a3f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d2a97720664a092",
            "arn": "arn:aws:ec2:us-east-1:110791536460:instance/i-05e7a13e7348068d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e7a13e7348068d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02aebd8b6f0c770d3",
            "private_dns": "ip-10-0-2-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.119",
            "public_dns": "ec2-3-226-241-101.compute-1.amazonaws.com",
            "public_ip": "3.226.241.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0232a59c9c7bf53f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000cf2f88b56d460c",
            "tags": {
              "Name": "itKMITL-Server2",
              "itclass": "npa23",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itKMITL-Server2",
              "itclass": "npa23",
              "itgroup": "year3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a1dd19caafd6430"
            ]
          },
          "dependencies": [
            "aws_security_group.sg2",
            "aws_subnet.Public2",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testweb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d2a97720664a092",
            "arn": "arn:aws:ec2:us-east-1:110791536460:instance/i-0ae083c560b1504d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae083c560b1504d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-002d00a653bcdab18",
            "private_dns": "ip-10-0-1-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.205",
            "public_dns": "ec2-18-206-249-138.compute-1.amazonaws.com",
            "public_ip": "18.206.249.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e93efc5ccb6e08a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031033229b2c47f0f",
            "tags": {
              "Name": "itKMITL-Server1",
              "itclass": "npa23",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itKMITL-Server1",
              "itclass": "npa23",
              "itgroup": "year3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a1dd19caafd6430"
            ]
          },
          "dependencies": [
            "aws_security_group.sg2",
            "aws_subnet.Public1",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testIgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:internet-gateway/igw-06a848c7dd647044e",
            "id": "igw-06a848c7dd647044e",
            "owner_id": "110791536460",
            "tags": {
              "Name": "itKMITL-IGW"
            },
            "tags_all": {
              "Name": "itKMITL-IGW"
            },
            "vpc_id": "vpc-00db97adf7d931ff2"
          },
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb_webLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:loadbalancer/app/elb-webLB/e0d5eca8a1e3c2c3",
            "arn_suffix": "app/elb-webLB/e0d5eca8a1e3c2c3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-webLB-1439813132.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:110791536460:loadbalancer/app/elb-webLB/e0d5eca8a1e3c2c3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elb-webLB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02a1dd19caafd6430"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000cf2f88b56d460c"
              },
              {
                "subnet_id": "subnet-031033229b2c47f0f"
              }
            ],
            "subnets": [
              "subnet-000cf2f88b56d460c",
              "subnet-031033229b2c47f0f"
            ],
            "vpc_id": "vpc-00db97adf7d931ff2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg2",
            "aws_subnet.Public1",
            "aws_subnet.Public2",
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:listener/app/elb-webLB/e0d5eca8a1e3c2c3/d6aef7b946b315e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/elb-tg/2205a05a435cd71c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:110791536460:listener/app/elb-webLB/e0d5eca8a1e3c2c3/d6aef7b946b315e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:loadbalancer/app/elb-webLB/e0d5eca8a1e3c2c3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.elb_webLB",
            "aws_lb_target_group.elb-tg",
            "aws_security_group.sg2",
            "aws_subnet.Public1",
            "aws_subnet.Public2",
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "elb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/elb-tg/2205a05a435cd71c",
            "arn_suffix": "targetgroup/elb-tg/2205a05a435cd71c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/elb-tg/2205a05a435cd71c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "elb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00db97adf7d931ff2"
          },
          "dependencies": [
            "aws_lb.elb_webLB",
            "aws_security_group.sg2",
            "aws_subnet.Public1",
            "aws_subnet.Public2",
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/elb-tg/2205a05a435cd71c-20230418030028914700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/elb-tg/2205a05a435cd71c",
            "target_id": "i-0ae083c560b1504d4"
          },
          "dependencies": [
            "aws_instance.testweb2",
            "aws_lb.elb_webLB",
            "aws_lb_target_group.elb-tg",
            "aws_security_group.sg2",
            "aws_subnet.Public1",
            "aws_subnet.Public2",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:route-table/rtb-04909278a92973f5a",
            "id": "rtb-04909278a92973f5a",
            "owner_id": "110791536460",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a848c7dd647044e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "itKMITL-publicRoute"
            },
            "tags_all": {
              "Name": "itKMITL-publicRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-00db97adf7d931ff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testIgw",
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099ea029f451ff2cb",
            "route_table_id": "rtb-04909278a92973f5a",
            "subnet_id": "subnet-031033229b2c47f0f"
          },
          "dependencies": [
            "aws_internet_gateway.testIgw",
            "aws_route_table.publicRoute",
            "aws_subnet.Public1",
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:security-group/sg-02a1dd19caafd6430",
            "description": "Allow incoming SSH and HTTP traffic to EC2 Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a1dd19caafd6430",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AllowSSHandWeb",
            "name_prefix": "",
            "owner_id": "110791536460",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00db97adf7d931ff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:subnet/subnet-031033229b2c47f0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031033229b2c47f0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "110791536460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itKMITL-PublicSubnet1"
            },
            "tags_all": {
              "Name": "itKMITL-PublicSubnet1"
            },
            "vpc_id": "vpc-00db97adf7d931ff2"
          },
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:subnet/subnet-000cf2f88b56d460c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000cf2f88b56d460c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "110791536460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itKMITL-PublicSubnet2"
            },
            "tags_all": {
              "Name": "itKMITL-PublicSubnet2"
            },
            "vpc_id": "vpc-00db97adf7d931ff2"
          },
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:vpc/vpc-00db97adf7d931ff2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b54268a9335ba82f",
            "default_route_table_id": "rtb-0022d6177cdc0976e",
            "default_security_group_id": "sg-0f20a48dc83c0dc55",
            "dhcp_options_id": "dopt-026e073fc7fc5d978",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00db97adf7d931ff2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0022d6177cdc0976e",
            "owner_id": "110791536460",
            "tags": {
              "Name": "itKMITL-VPC"
            },
            "tags_all": {
              "Name": "itKMITL-VPC"
            }
          }
        }
      ]
    }
  ]
}